Fixed card container overflowing

--- a/src/components/gallery-card3.css
+++ b/src/components/gallery-card3.css
@@ -18,11 +18,10 @@
   object-fit: cover;
 }
 .gallery-card3-container {
-  width: 85%;
+  width: 100%;
   height: 300px;
   display: flex;
   opacity: 0;
-  padding: var(--dl-space-space-twounits);
   z-index: 1;
   transition: 0.3s;
   align-items: center;
